# OpenMetaData

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  package-lock.json  pyproject.toml
alembic/: README.md  env.py  script.py.mako
app/: __init__.py
app/api/: __init__.py  engine_routes.py  main.py  semantic_bundle_questions.py
app/artifacts/: __init__.py  chatbot_package.py  export_chatbot_package.py  export_tag_bundle.py  generate.py  generator.py  semantic_bundle.py  tag_bundle.py
app/cli/: __init__.py
app/core/: __init__.py  inference_rules.py  logging.py  settings.py
config/: questionnaire.schema.json  semantic_inference.yaml  source.missing.template.yaml  source.template.yaml
docker/: docker-compose.openmetadata.yml
docs/: architecture.md  artifact-format.md  onboarding-flow.md  openmetadata-integration.md  questionnaire-design.md
scripts/: bootstrap_openmetadata.sh  generate_schemas.py
tests/: test_ai_resolver.py  test_api_introspection.py  test_api_semantic_bundle.py  test_api_simple_onboarding.py  test_api_ui.py  test_chatbot_package.py  test_decision_policy.py  test_discovery.py  test_engine_refresh.py  test_engine_review.py  test_enum_candidates.py  test_introspection.py  test_question_quality.py  test_questionnaire_merge.py  test_retrieval.py  test_semantic_bundle.py  test_semantics.py  test_simple_onboarding.py  test_state_manager.py  test_table_review_planner.py  test_tag_bundle.py  test_workspace_repository.py
ui/: README.md
ui-next/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+198 files in other folders)
